# podium

./: .codespellrc  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SOURCES.md  DIFFERENTIATORS.md  MODEL_CARD.md  README.md  ROADMAP.md  SETUP_GPU.md  pipeline.py  pyproject.toml  requirements.txt
agents/: competition_runner.py  eda_agent.py  ensemble_agent.py  feature_agent.py  model_agent.py
competition_types/: computer_vision.py  multimodal.py  nlp.py  tabular.py  time_series.py
deploy/: Dockerfile  Dockerfile.execution  docker-compose.yml  execution_runner.py  nginx.conf  serve.py
discovery/: fetch_bulk.py  kaggle_comprehensive.py  kaggle_notebooks.py  ml_papers_with_code.py  solution_writeups.py  solution_writeups_v2.py
evaluation/: eval.py
knowledge/: competition_memory.py  techniques_kb.py
scripts/: check_env.sh  run_all.sh  start_vllm.sh
synthesis/: competition_curriculum.py  dpo_pairs.py  multi_turn.py  synthesize_bulk.py  technique_pairs.py
training/: train.py  train_dpo.py  train_rl.py
training/configs/: dpo_config.yaml  rl_config.yaml  sft_config.yaml
validation/: prepare_rl_tasks.py  validate.py  validate_cv.py
web/: .gitignore  eslint.config.mjs  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: nav.tsx  waitlist.tsx
